# Merco

./: package-lock.json  package.json
merco-agents/: Cargo.toml
merco-agents/src/: lib.rs  main.rs
merco-agents/src/agent/: agent.rs
merco-agents/src/crew/: crew.rs
merco-agents/src/llm/: interface.rs
merco-agents/src/task/: task.rs
merco-llmproxy/: Cargo.toml  README.md
merco-llmproxy/src/: config.rs  lib.rs  main.rs  tools.rs  traits.rs
merco-llmproxy/src/providers/: mod.rs  ollama.rs  openai.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Sidebar.css  Sidebar.tsx
src/pages/: HomePage.tsx  SettingsPage.css  SettingsPage.tsx
