[package]
name = "merco-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
merco-llmproxy = { path = "../merco-llmproxy" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.79"
futures = "0.3.31"
dotenv = "0.15.0"
ctor = "0.4.2"
