[package]
name = "merco-llmproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures = "0.3" # For stream handling
futures-util = "0.3" # For stream utilities
thiserror = "1.0" # For better error types
reqwest = { version = "0.12", features = ["json", "stream"] } # HTTP Client
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
serde_json = "1.0" # JSON specific serde implementation
tokio = { version = "1", features = ["full"] } # Async runtime
bytes = "1" # For handling byte streams
# Add HTTP client like reqwest or hyper later
# Add JSON handling like serde later
